@@ -4,7 +4,7 @@ extreme = -vn -ac 2 -acodec libvorbis -q 8
 high    = -vn -ac 2 -acodec libvorbis -q 6
 normal  = -vn -ac 2 -acodec libvorbis -q 3
 low     = -vn -ac 2 -acodec libvorbis -q 1
-tiny    = -vn -ac 1 -acodec libvorbis -q 0
+tiny    = -vn -ac 1 -acodec libvorbis -q 0 -ar 32000
 
 
 [mp3]                                   # avconv options
@@ -31,7 +31,7 @@ extreme = -vn -ab 256k -ac 2 -acodec wmav2
 high    = -vn -ab 192k -ac 2 -acodec wmav2
 normal  = -vn -ab 128k -ac 2 -acodec wmav2
 low     = -vn -ab 64k  -ac 2 -acodec wmav2
-tiny    = -vn -ab 32k  -ac 1 -acodec wmav2
+tiny    = -vn -ab 32k  -ac 1 -acodec wmav2 -ar 32000
 
 [flac]                                  # avconv options
 insane  = -vn -acodec flac -compression_level 10
@@ -48,3 +48,12 @@ high    = --overwrite --extreme
 normal  = --overwrite --normal
 low     = --overwrite --telephone
 tiny    = --overwrite --quality 1.00
+
+
+[wv]                                    # wavpack options
+insane  = -i -y -hh
+extreme = -i -y -hh
+high    = -i -y -h
+normal  = -i -y
+low     = -i -y -f
+tiny    = -i -y -f
